# Bhasha-buddy

./: .gitignore  .huggingface.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  main.py  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md
.gitlab/merge_request_templates/: Feature.md
utils/: ai_utils.py  storage.py  translate.py
