[project]
name = "bhasha-buddy"
version = "0.1.0"
description = "BhashaBuddy - AI-powered meme creator, recipe finder, and landmark identifier with multilingual translation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
  { name = "Susrutha Chaparala", email = "susruthachaparala@gmail.com" }
]

dependencies = [
  "streamlit",
  "Pillow",
  "pydub",
  "openai-whisper",
  "transformers",
  "torch",
  "sentencepiece"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
